--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ pre code {
 }
 
 .rmdcomment:before {
-    font-family: "Font Awesome 5 Free";
+    font-family: FontAwesome;
     content: "\f0d0";
     left: 10px;
     position: absolute;
